<resources>
    <string name="app_name">MEDI-CONNECT</string>
        <string name="action_settings">Settings</string>
        <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
        <string name="profile_title">Mr Bean</string>
        <string name="posts">posts</string>
        <string name="followers">followers</string>
        <string name="following">following</string>
        <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
        <string name="lbl_set_profile_photo">Set profile image</string>
        <string name="lbl_take_camera_picture">Take a picture</string>
        <string name="lbl_choose_from_gallery">Choose from gallery</string>
        <string name="toast_image_intent_null">Image picker option is missing!</string>

        <!-- font families -->
        <string name="font_family_light">sans-serif-light</string>
        <string name="font_family_medium">sans-serif-medium</string>
        <string name="font_family_regular">sans-serif</string>
        <string name="font_family_condensed">sans-serif-condensed</string>
        <string name="font_family_black">sans-serif-black</string>
        <string name="font_family_thin">sans-serif-thin</string>
        <string name="dialog_permission_title">Grant Permissions</string>
        <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
        <string name="go_to_settings">GOTO SETTINGS</string>


    <string name="Sign_In">Sign In</string>
    <string name="Email_ID">Email ID</string>
    <string name="Password">password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="NEXT">NEXT</string>
    <string name="Full_Name">Full Name</string>
    <string name="Age">Age</string>
    <string name="Height">Height (cm)</string>
    <string name="Weight">Weight (kg)</string>
    <string name="Welcome">WELCOME ! Get registered to use the App.😊</string>
    <string name="Enter_Symptoms">Enter symptoms</string>
    <string name="Symptom_1">Symptom 1</string>
    <string name="Symptom_2">Symptom 2</string>
    <string name="Symptom_3">Symptom 3</string>
    <string name="Symptom_4">Symptom 4</string>
    <string name="Symptom_5">Symptom 5</string>
    <string name="Predict">Predict</string>
    <string name="Prognosis">Prognosis</string>
    <string name="Medical_Records">Medical Records</string>
    <string name="Self_Diagonsis">Self Diagonsis</string>
    <string name="time">Time</string>
    <string name="Password_Change">Password Update</string>
    <string name="Previous_Password">Previous password</string>
    <string name="New_Password">New password</string>
    <string name="Re_Type_Password">Re-type password</string>
    <string name="Update">UPDATE</string>
    <string name="Warden_Email">Warden email 📩</string>
    <string name="Some_More">Some more to get going...😊</string>
    <string name="Parent_Phone_Number">Parent phone number 📞</string>
    <string name="Parent_Email">Parent email📩</string>
    <string name="Doctor_Email">Doctor email 📩</string>
    <string name="Register">Register</string>
    <string name="Poc_Update">POC Update</string>
    <string name="Save_Changes">Save Changes</string>
    <string name="Profile_Update">Profile Update</string>
    <string name="Edit_Profile">Edit profile</string>
    <string name="View_Profile">View Profile</string>
    <string name="Point_Of_Contact">Point of contact</string>
    <string name="Change_Password">Change Password</string>
    <string name="Settings">Settings</string>

    <string name="Previous_Diseases_Allergies">Previous diseases/Allergies</string>
    <string name="Enter_previous_diseases_allergies_if_any">Enter Previous diseases/allergies if any</string>
    <string name="Logout">Logout</string>

    <string name="Languages">Languages</string>
    <string name="User_Interface">User Interface</string>
    <string name="Home">Home</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="menu_share">Share</string>
    <string name="About_Us">About us</string>
    <string name="Symptom_Specific">Symptom Specific Checkup</string>

    <string name="privacy">We built this app as a free app. This service is provided at no cost and is intended for use as is. This page is used to inform visitors regarding our policies with the collection, use, and disclosure of personal Information.\n\nInformation Collection and Use\nWe do not collect any information of our app\'s users.\n\nCookies\nThis service does not use cookies.\n\nService Providers\nWe do not employ any third–party companies or individuals.\n\nChanges to This Privacy Policy\nWe may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes.\n\nPrivacy Policy on this page\nThis policy is effective as of 31/12/2021.</string>
    <string name="Browser">Check out our website</string>
    <string name="Email">Contact us through email</string>
    <string name="Instagram">Check out our instagram</string>
    <string name="Maps">Check out our location</string>
    <string name="General_Checkup">General Checkup</string>


    <string name="Privacy_policy">Privacy policy</string>
    <string name="Your_total_steps">Your total steps</string>
    <string name="Today">Today : </string>
    <string name="This_Month">This Month : </string>

</resources>