<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:item="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/View_Profile"/>
    <item
        android:id="@+id/Poc"
        android:icon="@drawable/ic_poc"
        android:title="@string/Point_Of_Contact"
        />
    <item
        android:id="@+id/password"
        android:icon="@drawable/ic_privacy"
        android:title="@string/Change_Password">
    </item>

    <item
        android:id="@+id/privacy_policy"
        android:icon="@drawable/ic_password"
        android:title="@string/Privacy_policy">
    </item>

    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/menu_share">
    </item>

    <item
        android:id="@+id/about_us"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/About_Us">
    </item>


    </menu>