<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image1"
    tools:context=".Passwordupdate">


    <EditText
        android:id="@+id/prevpswd"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:background="@drawable/roundcorners"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Previous_Password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newpswd"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:background="@drawable/roundcorners"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/New_Password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/repswd"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:background="@drawable/roundcorners"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Re_Type_Password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="147dp"
        android:layout_height="47dp"
        android:layout_marginTop="508dp"
        android:onClick="pswdupdate"
        android:text="@string/Update"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>






