<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profileupdate">

    <TextView
        android:id="@+id/textView"
        android:layout_width="162dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/Profile_Update"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="76dp"
        android:layout_height="30dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:gravity="center"
        android:text="@string/Age"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="96dp"
        android:layout_height="33dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:gravity="center"
        android:text="@string/Height"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="91dp"
        android:layout_height="34dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:gravity="center"
        android:text="@string/Weight"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/agetext"
        android:layout_width="115dp"
        android:layout_height="49dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <EditText
        android:id="@+id/heighttext"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <EditText
        android:id="@+id/weighttext"
        android:layout_width="117dp"
        android:layout_height="43dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updatepoc"

        android:text="@string/Save_Changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/imagebutton"
        android:layout_width="131dp"
        android:layout_height="46dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:onClick="edit"
        android:text="@string/Edit_Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

</androidx.constraintlayout.widget.ConstraintLayout>